[aliases]
test=pytest

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E203, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  doc,
  __init__.py,
  tests/.tests

[tool:pytest]
addopts = --black --flake8 --mypy --ignore-glob=*/version.py
flake8-ignore = E133 E203 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503
asyncio_mode = auto

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
# The following only excludes version.py when running mypy from the command line.
# `--ignore-glob=*version.py` in `[tool:pytest]` excludes the file from pytest,
# because pytest explicitly specifies each file being tested, and that overrides mypy's exclude.
exclude = version\.py

[mypy-lsst.*]
# Work around problems from mypy not knowing what type __path__ is
# and DM using __path__ in python/lsst/__init__.py files.
# This will probaby be fixed by https://github.com/python/mypy/issues/1422
ignore_errors = True

[metadata]
version = attr: setuptools_scm.get_version
